--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,6 +45,10 @@ section {
 	color: #e6e6e6;
 }
 
+.navbar-item-selected a:hover {
+	color: White;
+}
+
 .navbar-item-main a {
 	font-size: 110%;
 	color: White;
@@ -56,26 +60,4 @@ section {
 
 .navbar .icon {
   display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .navbar a:not(:first-child) {display: none;}
-  .navbar a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .navbar.responsive {position: relative;}
-  .navbar.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .navbar.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 }
