--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,14 +24,32 @@ header {
 
 h1 {
 	font-size: 18.72px;
+	display: block;
+	margin-top: 0.67em;
+	margin-bottom: 0.67em;
+	margin-left: 0;
+	margin-right: 0;
+	font-weight: bold;
 }
 
 h2 {
 	font-size: 16px;
+	display: block;
+	margin-top: 0.83em;
+	margin-bottom: 0.83em;
+	margin-left: 0;
+	margin-right: 0;
+	font-weight: bold;	
 }
 
 h3 {
 	font-size: 13.28px;
+	display: block;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	margin-left: 0;
+	margin-right: 0;
+	font-weight: bold;	
 }
 
 section {
