--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -41,3 +41,8 @@
 .navbar .icon {
   display: none;
 }
+
+@media screen and (max-width: 700px) {
+  ul.navbar li.right, 
+  ul.navbar li {float: none;}
+}
