--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -5,7 +5,7 @@
 	margin-left: 0;
 	margin-right: 0;
 	overflow: hidden;
-	background-color: MediumSlateBlue;
+	background-color: Black;
 }
 
 .navbar-item {
@@ -18,7 +18,7 @@
 	text-align: center;
 	padding: 14px 18px;
 	text-decoration: none;
-	background-color: MediumSlateBlue;
+	background-color: Black;
 }
 
 .navbar-item a:hover {
