--- a/_includes/cubing_programs.html
+++ b/_includes/cubing_programs.html
@@ -1,2 +1,3 @@
 * [Nachbildung](cubing/nachbildung.html)
 * [WCA ID Records](cubing/wca_id_records.html)
+* [AlgSheetGen](programming/algsheetgen.html)
