Added scramble size stuff
I'm so extremely bad at coding.
This will 99% break again.

--- a/_includes/cubing_programs.html
+++ b/_includes/cubing_programs.html
@@ -1,3 +1,4 @@
 * [Nachbildung](cubing/nachbildung.html)
 * [WCA ID Records](cubing/wca_id_records.html)
 * [AlgSheetGen](programming/algsheetgen.html)
+* [Scramble Size Stuff](programming/scramble_size_stuff.html)
